--- a/Applynow.html
+++ b/Applynow.html
@@ -39,7 +39,7 @@
       <nav>
           
       <ul>
-          <li> <a href="Index.html"> Home </a>
+          <li> <a href="index.html"> Home </a>
           <ul><li><a href="about_us.html">About us</a></li></ul>
           </li>
           <li> <a href="courses.html"> Courses</a>
