--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <nav>
           
       <ul>
-          <li> <a href="Index.html"> Home </a>
+          <li> <a href="index.html"> Home </a>
           <ul><li><a href="about_us.html">About us</a></li></ul>
           </li>
           <li> <a href="courses.html"> Courses</a>
