--- a/feedback.html
+++ b/feedback.html
@@ -117,7 +117,7 @@
         <div class="left box">
         <h2>About Us</h2>
             <div class="content">
-            <p>Hey have a look a our new website..</p>
+            <p>Hey have a look at our new website..</p>
                <div class="social">
                     <a href="https://en-gb.facebook.com/"><span class="fa fa-facebook-f"></span></a>
                     <a href="https://twitter.com/?lang=en-gb"><span class="fa fa-twitter"></span></a>
@@ -148,7 +148,7 @@
                 <div class="nav">
                 <div class="footerlinks">
                    <ul>
-                      <li><a href="Index.html">Home</a></li>
+                      <li><a href="index.html">Home</a></li>
                       <li><a href="courses.html">Courses</a></li>
                       <li><a href="careers.html">Careers</a></li>
                       <li><a href="existing_trainee.html">Existing Trainee</a></li>
