--- a/careers.html
+++ b/careers.html
@@ -121,7 +121,7 @@
                 <div class="nav">
                 <div class="footerlinks">
                    <ul>
-                      <li><a href="Index.html">Home</a></li>
+                      <li><a href="index.html">Home</a></li>
                       <li><a href="courses.html">Courses</a></li>
                       <li><a href="careers.html">Careers</a></li>
                       <li><a href="existing_trainee.html">Existing Trainee</a></li>
