--- a/Applynow.html
+++ b/Applynow.html
@@ -63,7 +63,7 @@
       <div class="row">
     <div class="col-md-10-offset-md-1">
           <div class="card" > 
-        <div class="card-header bg-info text-white">
+        <div class="card-header bg-info text-white">I
               <h><b>EMPLOYEES FORM</b></h>
               </div>
               <div class="card-body" style="background-color:e9ecef;" >
@@ -321,7 +321,7 @@
                 <div class="nav">
                 <div class="footerlinks">
                    <ul>
-                      <li><a href="Index.html">Home</a></li>
+                      <li><a href="index.html">Home</a></li>
                       <li><a href="courses.html">Courses</a></li>
                       <li><a href="careers.html">Careers</a></li>
                       <li><a href="existing_trainee.html">Existing Trainee</a></li>
